Have added some routes and controllers

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Shaula
+
+  p 100 words about Shaula
+
+  p navigation
+
+  p link to login
