--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,6 +13,12 @@ html
         div(class='col-sm-2')
           block sidebar
             ul(class='sidebar-nav')
+              if !user
+                li
+                a(href='/login') Login
+              if user
+                li
+                  a(href='/register') Register New User
               li 
                 a(href='/') Home
               li 
@@ -21,5 +27,7 @@ html
                 a(href='/manuals') List of Manuals
               li 
                 a(href='/documents') List of Documents
+              if user
+                p Welcome #{user}
         div(class='col-sm-10')
     block content
