Made a trivial change to index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,6 @@ extends layout
 block content
   h1 Shaula
 
-  p 100 words about Shaula
+  p 100 words about Shaula...
 
   p photos of Shaula etc etc
